idea/testData/checker/RecursiveTypeInference.jet
namespace a {
    val foo = bar()

    fun bar() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">foo</error>
}

namespace b {
    fun foo() = bar()

    fun bar() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">foo()</error>
}

namespace c {
    fun bazz() = bar()

    fun foo() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">bazz()</error>

    fun bar() = foo()
}

namespace ok {

    namespace a {
        val foo = bar()

        fun bar() : Int = foo
    }

    namespace b {
        fun foo() : Int = bar()

        fun bar() = foo()
    }

    namespace c {
        fun bazz() = bar()

        fun foo() : Int = bazz()

        fun bar() = foo()
    }
}
